--- a/MusicPlayerApp/Resources/Styles/Colors.xaml
+++ b/MusicPlayerApp/Resources/Styles/Colors.xaml
@@ -4,7 +4,7 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
 
-    <Color x:Key="AccentColor">#512BD4</Color>
+    <Color x:Key="AccentColor">#2d2e37</Color>
     <Color x:Key="AccentTextColor">#FFFFFF</Color>
     <Color x:Key="BackgroundColor">#060812</Color>
 
