Added New Releases Page

--- a/MusicPlayerApp/AppShell.xaml
+++ b/MusicPlayerApp/AppShell.xaml
@@ -29,6 +29,6 @@
             Title="New Releases"
             Icon="ic_newrelease.png"
             Route="NewReleases"
-            ContentTemplate="{DataTemplate views:HomeView}"/>
+            ContentTemplate="{DataTemplate views:NewReleasesView}"/>
     </TabBar>
 </Shell>
