--- a/MusicPlayerApp/Views/AlbumView.xaml
+++ b/MusicPlayerApp/Views/AlbumView.xaml
@@ -8,7 +8,33 @@
              Title="{Binding Name}"
              BackgroundColor="#2d2e37">
 
+    <mvvm:TinyView.ToolbarItems>
+        <ToolbarItem Text="Actions" Order="Primary" Priority="0" Clicked="OpenActions" />
+    </mvvm:TinyView.ToolbarItems>
+
     <Grid>
+
+        <Frame x:Name="ActionsFrame" IsVisible="False" BackgroundColor="Transparent" CornerRadius="10" Padding="10">
+            <StackLayout VerticalOptions="Center" Spacing="20">
+                <Button Background="White"
+                Text="Add to favorites"
+                TextColor="#2d2e37"
+                FontFamily="Rubik"
+                FontSize="15"
+                CornerRadius="20"
+                HorizontalOptions="Center"
+                VerticalOptions="Center"/>
+                <Button Background="White"
+                Text="Remove from favorites"
+                TextColor="#2d2e37"
+                FontFamily="Rubik"
+                FontSize="15"
+                CornerRadius="20"
+                HorizontalOptions="Center"
+                VerticalOptions="Center"/>
+            </StackLayout>
+        </Frame>
+
         <ActivityIndicator IsRunning="{Binding IsBusy}"
                            HorizontalOptions="Center"
                            VerticalOptions="Center"/>
