Added TrackView and implemented follow/unfollow for artists, albums and tracks

--- a/MusicPlayerApp/Views/AlbumView.xaml
+++ b/MusicPlayerApp/Views/AlbumView.xaml
@@ -17,21 +17,23 @@
         <Frame x:Name="ActionsFrame" IsVisible="False" BackgroundColor="Transparent" CornerRadius="10" Padding="10">
             <StackLayout VerticalOptions="Center" Spacing="20">
                 <Button Background="White"
-                Text="Add to favorites"
-                TextColor="#2d2e37"
-                FontFamily="Rubik"
-                FontSize="15"
-                CornerRadius="20"
-                HorizontalOptions="Center"
-                VerticalOptions="Center"/>
+                        Text="Add to favorites"
+                        TextColor="#2d2e37"
+                        FontFamily="Rubik"
+                        FontSize="15"
+                        CornerRadius="20"
+                        HorizontalOptions="Center"
+                        VerticalOptions="Center"
+                        Command="{Binding AddToFavoritesCommand}"/>
                 <Button Background="White"
-                Text="Remove from favorites"
-                TextColor="#2d2e37"
-                FontFamily="Rubik"
-                FontSize="15"
-                CornerRadius="20"
-                HorizontalOptions="Center"
-                VerticalOptions="Center"/>
+                        Text="Remove from favorites"
+                        TextColor="#2d2e37"
+                        FontFamily="Rubik"
+                        FontSize="15"
+                        CornerRadius="20"
+                        HorizontalOptions="Center"
+                        VerticalOptions="Center"
+                        Command="{Binding RemoveFromFavoritesCommand}"/>
             </StackLayout>
         </Frame>
 
