--- a/MusicPlayerApp/Views/AlbumView.xaml
+++ b/MusicPlayerApp/Views/AlbumView.xaml
@@ -14,11 +14,12 @@
 
     <Grid>
 
-        <Frame x:Name="ActionsFrame" IsVisible="False" BackgroundColor="Transparent" CornerRadius="10" Padding="10">
+        <Frame x:Name="ActionsFrame" IsVisible="False" BackgroundColor="#80000000" CornerRadius="10" Padding="10">
             <StackLayout VerticalOptions="Center" Spacing="20">
                 <Button Background="White"
                         Text="Add to favorites"
                         TextColor="#2d2e37"
+                        WidthRequest="200"
                         FontFamily="Rubik"
                         FontSize="15"
                         CornerRadius="20"
@@ -28,6 +29,7 @@
                 <Button Background="White"
                         Text="Remove from favorites"
                         TextColor="#2d2e37"
+                        WidthRequest="200"
                         FontFamily="Rubik"
                         FontSize="15"
                         CornerRadius="20"
